k8s-deployment/java-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
spec:
  ingressClassName: nginx  # Updated to use the spec.ingressClassName field
  rules:
  - host: a353771ef583749209a7cc0586337e88-221330250.us-east-2.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: java-app-service
            port:
              number: 8080
